--- a/09_Wahna Nur Fauziah_PAW_TGS 3/cv.html
+++ b/09_Wahna Nur Fauziah_PAW_TGS 3/cv.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/visualcv.css" />
+    <link rel="stylesheet" href="css/visualcv.css" />
   </head>
   <body>
     <div class="cv-container">
